# notebooks

./: .gitignore  Colour gradient test.ipynb  Discover RDFLib.ipynb  Graph from db data.ipynb  Percentiles.ipynb  Python course 1.ipynb  README.md  Swann.ipynb  pyproject.toml  requierments.txt  start.sh  start_tmux.sh
.ipynb_checkpoints/: Discover RDFLib-checkpoint.ipynb
