[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Swann"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
psycopg2-binary = "^2.8.6"
colour = "^0.1.5"
Pillow = "^9.0.1"
prettytable = "^2.1.0"
boto3 = "^1.18.15"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
